[gd_scene load_steps=11 format=3 uid="uid://b0ndnwk2bedaa"]

[ext_resource type="Script" path="res://scenes/dialog/p5_dialog.gd" id="1_2dxwq"]
[ext_resource type="FontFile" uid="uid://bbpq1vabh86xr" path="res://assets/font/smiley-sans-v2.0.1/SmileySans-Oblique.ttf" id="2_wymg5"]
[ext_resource type="Texture2D" uid="uid://dmaqkcakf6m02" path="res://icon.svg" id="3_dfwub"]
[ext_resource type="Shader" path="res://shaders/main_canvas.gdshader" id="3_g3dit"]

[sub_resource type="Animation" id="Animation_tquh1"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("DialogNode/DialogBox:skew")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("DialogNode/NameBox:skew")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("DialogNode:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_q2sxt"]
resource_name = "play_in"
length = 0.4
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CharacterSprite:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-20, 0), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CharacterSprite:self_modulate")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0.490196), Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("NameLabel:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("TextLabel:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("DialogNode:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.3, 0.3001),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [false, true, true]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("DialogNode/NameBox:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("DialogNode/DialogBox:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("TextLabel:self_modulate")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0.3, 0.4),
"transitions": PackedFloat32Array(2.07053, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_h1ctl"]
resource_name = "play_out"
length = 0.85
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("DialogNode/MarkNode:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("TextLabel:self_modulate")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0.490196), Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("DialogNode/DialogBox:skew")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, 0.0, 0.0349066]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("DialogNode/NameBox:skew")
tracks/3/interp = 2
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, 0.0, 0.0174533]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("DialogNode:scale")
tracks/4/interp = 2
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1, 1), Vector2(0.85, 0.85)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("DialogNode/DialogBox:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, true, false]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("DialogNode/NameBox:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, true, false]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("NameLabel:visible")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, true, false]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("CharacterSprite:self_modulate")
tracks/8/interp = 2
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0, 0.6, 0.7, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0.490196), Color(1, 1, 1, 0)]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("CharacterSprite:position")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 0), Vector2(-20, 0)]
}
tracks/10/type = "value"
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/path = NodePath("DialogNode:visible")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/keys = {
"times": PackedFloat32Array(0.5, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_lmg3t"]
_data = {
"RESET": SubResource("Animation_tquh1"),
"play_in": SubResource("Animation_q2sxt"),
"play_out": SubResource("Animation_h1ctl")
}

[sub_resource type="ShaderMaterial" id="ShaderMaterial_sgluh"]
shader = ExtResource("3_g3dit")

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_xm5r8"]

[node name="Dialog" type="Control"]
layout_mode = 3
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -549.0
offset_top = -427.0
offset_right = 549.0
grow_horizontal = 2
grow_vertical = 0
mouse_filter = 2
script = ExtResource("1_2dxwq")
box_color = Color(0.0823529, 0.0666667, 0.027451, 0.784314)
border_color = Color(1, 1, 1, 1)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_lmg3t")
}

[node name="CharacterSprite" type="Sprite2D" parent="."]
scale = Vector2(3.438, 3.32)
texture = ExtResource("3_dfwub")
centered = false

[node name="DialogNode" type="Node2D" parent="."]
position = Vector2(363, 306)

[node name="DialogBox" type="Polygon2D" parent="DialogNode"]
position = Vector2(-270, -542)
color = Color(0.0823529, 0.0666667, 0.027451, 0.784314)
polygon = PackedVector2Array(272, 544, 271, 550, 326, 609, 341, 594, 382, 637, 401, 620, 857, 676, 833, 489, 832, 467, 777, 476, 361, 508, 352, 549, 317, 523, 314, 544, 308, 550)

[node name="DialogBoxBorder" type="Polygon2D" parent="DialogNode/DialogBox"]
polygon = PackedVector2Array(280, 548, 328, 599, 343, 585, 382, 625, 400, 612, 849, 668, 826, 477, 363, 513, 358, 561, 322, 530, 318, 559, 280, 548, 304, 564, 322, 571, 327, 544, 361, 569, 367, 519, 818, 486, 841, 660, 395, 603, 383, 615, 343, 574, 328, 589, 304, 564)

[node name="NameBox" type="Polygon2D" parent="DialogNode"]
position = Vector2(-269, -541)
color = Color(0.0823529, 0.0666667, 0.027451, 0.784314)
polygon = PackedVector2Array(285, 534, 386, 527, 375, 509, 541, 486, 511, 434, 333, 484, 342, 499)

[node name="NameBoxContent" type="Polygon2D" parent="DialogNode/NameBox"]
polygon = PackedVector2Array(295, 530, 295, 531, 378, 523, 369, 508, 531, 481, 507, 441, 341, 487, 349, 503)

[node name="MarkNode" type="Node2D" parent="DialogNode"]
visible = false
position = Vector2(509, 81)
scale = Vector2(1.10008, 1.10008)

[node name="MarkBox" type="Polygon2D" parent="DialogNode/MarkNode"]
position = Vector2(-763, -609)
color = Color(0.0823529, 0.0666667, 0.027451, 0.784314)
polygon = PackedVector2Array(764, 607, 781, 609, 909, 562, 853, 512)

[node name="MarkBoxContent" type="Polygon2D" parent="DialogNode/MarkNode/MarkBox"]
polygon = PackedVector2Array(771, 603, 784.943, 603.168, 890.943, 560.168, 856, 522)

[node name="NameLabel" type="Label" parent="."]
layout_mode = 1
offset_left = 463.0
offset_top = 245.0
offset_right = 523.0
offset_bottom = 272.0
rotation = -0.261799
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_wymg5")
theme_override_font_sizes/font_size = 18
text = "雨宫 莲"
vertical_alignment = 1

[node name="TextureRect" type="TextureRect" parent="NameLabel"]
material = SubResource("ShaderMaterial_sgluh")
layout_mode = 0
offset_left = 18.0
offset_top = 2.0
offset_right = 35.0
offset_bottom = 26.0
texture = SubResource("PlaceholderTexture2D_xm5r8")

[node name="ContrastLabel" type="Label" parent="NameLabel/TextureRect"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -9.5
offset_top = -13.0
offset_right = 9.5
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_wymg5")
theme_override_font_sizes/font_size = 18
text = "宫"
vertical_alignment = 1

[node name="TextLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 502.0
offset_top = 289.0
offset_right = 899.0
offset_bottom = 361.0
theme_override_constants/line_spacing = -4
theme_override_fonts/font = ExtResource("2_wymg5")
theme_override_font_sizes/font_size = 26
text = "心之怪盗团一二三四五六七八九十
take your heart!"
vertical_alignment = 1
